set fill color when filling alphavdev area for gradients (tdf#138959)

When drawing a gradient to an alpha-enabled output device, make
the area also opaque (=black in the alphavdev).

Change-Id: I2ba1a598e0bf6291e5422253352a201e224af2b8